# intel-cmt-cat

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CONTRIBUTING  ChangeLog  INSTALL  LICENSE  Makefile  README  README.md  alloc.c  alloc.h  example.cfg  example_BDX_12LLC_ways.cfg  example_HSX_20LLC_ways.cfg  main.c  main.h  monitor.c  monitor.h  pqos.8  pre-build.mk  profiles.c  profiles.h
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
appqos/: .coveragerc  .pylintrc  AppQoS_proxy_usage.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README  README.md  appqos.conf  appqos.py  cache_ops.py  caps.py  cli.conf  cli.py  collectorperf.py  common.py  config.py  flusher.py  generate_ssl_cert.sh  log.py  perf.py  perfapi.c  pid_ops.py  power.py  power_common.py  pqos_api.py  pqosapi.c  processor.py  pyproject.toml  pytest.ini  requirements.txt  rest.py  setup.cfg  setup.py  sstbf.py  stats.py  timer.py
appqos/ansible/: README.md  deploy.yml  destroy.yml
appqos/ansible/appqos/: README
appqos/ansible/appqos/meta/: main.yml
appqos/ansible/appqos/tasks/: deploy_appqos.yml  install_venv.yml  is_appqos_running.yml  main.yml  start_appqos.yml
appqos/ansible/intel/appqos/: README.md  galaxy.yml
appqos/ansible/intel/appqos/playbooks/: deploy.yml  stop.yml
appqos/ansible/intel/appqos/playbooks/inventory/: hosts
appqos/ansible/intel/appqos/roles/appqos/: README.md
appqos/ansible/intel/appqos/roles/appqos/defaults/: main.yml
appqos/ansible/intel/appqos/roles/appqos/meta/: main.yml
appqos/ansible/intel/appqos/roles/appqos/tasks/: clone_appqos_repo.yml  copy_mtls_key_certs.yml  deploy_appqos.yml  generate_ssl_key_certs.yml  install_build_dependencies.yml  install_git.yml  install_libpqos.yml  install_pgrep.yml  install_python.yml  install_venv.yml  is_appqos_running.yml  main.yml  start_appqos.yml  stop_appqos.yml
appqos/ansible/inventory/: hosts
appqos/ansible/roles/appqos/defaults/: main.yml
appqos/ansible/roles/appqos/meta/: main.yml
appqos/ansible/roles/appqos/tasks/: certificates.yml  configure.yml  install.yml  main.yml  start.yml
appqos/ansible/roles/destroy/defaults/: main.yml
appqos/ansible/roles/destroy/tasks/: main.yml
appqos/appqos/: __init__.py  __main__.py  __version__.py  appqos.py  cache_ops.py  caps.py  common.py  config.py  config_store.py  log.py  manager.py  pid_ops.py  power.py  power_common.py  pqos_api.py  sstbf.py  stats.py
appqos/appqos/rest/: rest_app.py  rest_caps_cpu.py  rest_exceptions.py  rest_misc.py  rest_pool.py  rest_power.py  rest_rdt.py  rest_server.py
appqos/appqos/schema/: add_app_response.json  add_pool.json  add_pool_response.json  add_power.json  add_power_response.json  appqos.json  definitions.json  get_app_all_response.json  get_caps_cpu_response.json  get_caps_l2ca_response.json  get_caps_l3ca_response.json  get_caps_rdt_iface_response.json  get_pool_all_response.json  get_pool_response.json  get_power_response.json  get_sstbf_response.json  get_stats_response.json  modify_cdp.json  modify_pool.json  modify_power.json  modify_rdt_iface.json  modify_sstbf.json  pool.json
appqos/ca/: gen_certs.sh  gen_test_certs.sh  gen_test_certs_additional.sh
appqos/doc/: Advanced_AppQoS_Usage_Guide.txt
appqos/docker/: .hadolint.yaml  Dockerfile  README  build_docker.sh
appqos/examples/: appqos_apps_pools_example.conf
appqos/examples/haproxy/redhat/: haproxy.cfg
appqos/examples/haproxy/ubuntu/: haproxy.cfg
appqos/pid_cache_flush/: LICENSE  Makefile  README  intel_pid_cache_flush.c
appqos/rest/: rest_app.py  rest_auth.py  rest_exceptions.py  rest_misc.py  rest_pool.py  rest_power.py  rest_rdt.py  rest_server.py
appqos/schema/: README  add_app.json  add_app_response.json  add_pool.json  add_pool_response.json  appqos.json  cli.json  definitions.json  get_app_response.json  get_caps_mba_ctrl_response.json  get_caps_mba_response.json  get_caps_response.json  get_group_all_response.json  get_group_response.json  get_power_all_response.json  get_sstbf_response.json  get_stats_response.json  modify_app.json  modify_mba_ctrl.json  modify_pool.json  modify_sstbf.json  move_app.json
appqos/tests/: gen_config.py  rest_common.py  test_cache_ops.py  test_caps.py  test_cli.py  test_config.py  test_config_store.py  test_pid_ops.py  test_power.py  test_pqos_api.py  test_rest.py  test_rest_api.py  test_rest_api_empty.py  test_rest_app.py  test_rest_auth.py  test_rest_caps.py  test_rest_pool.py  test_rest_power.py  test_rest_reset.py  test_rest_sstbf.py  test_rest_stats.py  test_sstbf.py  test_stats.py
appqos_client/: .codespellrc  .eslintrc.json  .gitignore  Makefile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
configs/: README  mon_llc_pid_xml_file.cfg
lib/: Makefile  README  acpi.c  acpi.h  acpi_table.h  allocation.c  allocation.h  allocation_common.c  allocation_common.h  api.c  api.h  api_doxygen.cfg  cap.c  cap.h  common.c  common.h  common_monitoring.c  common_monitoring.h  cores_domains.c  cores_domains.h  cpu_registers.h  cpuinfo.c  cpuinfo.h  erdt.c  erdt.h  host_allocation.c  host_allocation.h  host_cap.c  host_cap.h  host_monitoring.c  host_monitoring.h  host_pidapi.c  host_pidapi.h  hw_cap.c  hw_cap.h  hw_monitoring.c  hw_monitoring.h  iordt.c  iordt.h  lib_doxygen.cfg  (+56 more)
lib/python/: .pylintrc  LICENSE  Makefile  Pipfile  README.md  README.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
lib/python/pqos/: __init__.py  allocation.py  capability.py  common.py  cpuinfo.py  devinfo.py  error.py  l2ca.py  l3ca.py  mba.py  monitoring.py  native_struct.py  pqos.py
lib/python/pqos/test/: __init__.py  helper.py  mock_pqos.py  test_allocation.py  test_capability.py  test_cpuinfo.py  test_devinfo.py  test_l2ca.py  test_l3ca.py  test_mba.py  test_monitoring.py  test_pqos.py
perl/: README  hello_world.pl
pid/: Makefile
pqos/: Makefile  README  alloc.c  alloc.h  cap.c  cap.h  common.c  common.h  dump.c  dump.h  dump_rmids.c  dump_rmids.h  main.c  main.h  monitor.c  monitor.h  monitor_csv.c  monitor_csv.h  monitor_text.c  monitor_text.h  monitor_utils.c  monitor_utils.h  (+7 more)
(+424 files in other folders)
