[metadata]
name = appqos
version = attr: appqos.__version__
description = App QoS is a software created to demonstrate the use of Intel(R) RDT technologies (CAT, MBA) to improve QoS for applications via partitioning system resources.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
licence_file = LICENSE
url = https://github.com/intel/intel-cmt-cat
project_urls =
    Bug Tracker = https://github.com/intel/intel-cmt-cat/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: BSD License
author = Adrian Boczkowski <AdrianX.Boczkowski@intel.com>, Michal Aleksinski <michalx.aleksinski@intel.com>, Wojciech Andralojc <wojciechx.andralojc@intel.com>
maintainer = Michal Aleksinski
maintainer_email = michalx.aleksinski@intel.com

[options]
python_requires = >= 3.5
packages = appqos, appqos.rest
include_package_data = True
install_requires =
    pqos == 4.4.1
    jsonschema
    pexpect
    flask
    flask-restful
    gevent
    psutil
    pwr @ git+https://github.com/intel/CommsPowerManagement.git@pwr-v0.2.1#egg=pwr&subdirectory=pwr
