[metadata]
name = pqos
version = 4.3.0
description = Python interface for PQoS library
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
licence_file = LICENSE
url = https://github.com/intel/intel-cmt-cat
project_urls =
    Bug Tracker = https://github.com/intel/intel-cmt-cat/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: BSD License
author = Adrian Boczkowski <AdrianX.Boczkowski@intel.com>, Michal Aleksinski <michalx.aleksinski@intel.com>, Wojciech Andralojc <wojciechx.andralojc@intel.com>, Khawar Abbasi <khawar.abbasi@intel.com>
maintainer = Khawar Abbasi
maintainer_email = khawar.abbasi@intel.com

[options]
python_requires = >= 3.5
packages = pqos, pqos.test
