[metadata]
name = pqos
version = 4.4.1
description = Python interface for Intel(R) RDT PQoS library
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
licence_file = LICENSE
url = https://github.com/intel/intel-cmt-cat
project_urls =
    Bug Tracker = https://github.com/intel/intel-cmt-cat/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: BSD License
author = Adrian Boczkowski <AdrianX.Boczkowski@intel.com>, Michal Aleksinski <michalx.aleksinski@intel.com>, Wojciech Andralojc <wojciechx.andralojc@intel.com>, Khawar Abbasi <khawar.abbasi@intel.com>
maintainer = Michal Aleksinski
maintainer_email = michalx.aleksinski@intel.com

[options]
python_requires = >= 3.5
packages = pqos, pqos.test
